force-app/main/default/objects/Case/fields/Account_vertical__c.field-meta.xml
<CustomField>
    <fullName>Account_vertical__c</fullName>
    <formula>TEXT(Account.Vertical__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account vertical</label>
    <type>Text</type>
</CustomField>