force-app/main/default/objects/Case/fields/Age_to_Resolved_h__c.field-meta.xml
<CustomField>
    <fullName>Age_to_Resolved_h__c</fullName>
    <description>SP-2331 - Age Field for Cases from opened date to Resolved date</description>
    <formula>(Date_Time_Resolved__c -  CreatedDate )*24</formula>
    <label>Age to Resolved (h)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>