force-app/main/default/objects/Case/fields/ALAN_Identifier__c.field-meta.xml
<CustomField>
    <fullName>ALAN_Identifier__c</fullName>
    <label>ALAN Identifier</label>
    <length>120</length>
    <type>Text</type>
</CustomField>