force-app/main/default/objects/Case/fields/Approved__c.field-meta.xml
<CustomField>
    <fullName>Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>keep track of case approval process. when its check its approved</description>
    <label>Approved</label>
    <type>Checkbox</type>
</CustomField>