force-app/main/default/objects/Case/fields/Backend_ID__c.field-meta.xml
<CustomField>
    <fullName>Backend_ID__c</fullName>
    <description>Restaurant Backend Id</description>
    <formula>Account.Backend_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Backend ID</label>
    <type>Text</type>
</CustomField>