force-app/main/default/objects/Case/fields/Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Bank_Name__c</fullName>
    <description>Name of the Bank</description>
    <label>Bank Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>