force-app/main/default/objects/Case/fields/BE_Account_Errors__c.field-meta.xml
<CustomField>
    <fullName>BE_Account_Errors__c</fullName>
    <label>BE Account Errors</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Missing Details</fullName>
            </value>
            <value>
                <fullName>Wrong Name of Restaurant</fullName>
            </value>
            <value>
                <fullName>Wrong Commission</fullName>
            </value>
            <value>
                <fullName>Wrong Categories</fullName>
            </value>
            <value>
                <fullName>Wrong Phone Numbers</fullName>
            </value>
            <value>
                <fullName>Wrong Email/Transmission Method</fullName>
            </value>
            <value>
                <fullName>Wrong Delivery Suburbs</fullName>
            </value>
            <value>
                <fullName>Wrong Delivery Charges/Min</fullName>
            </value>
            <value>
                <fullName>Wrong Opening Hours</fullName>
            </value>
            <value>
                <fullName>Multiple Backend ID</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>