force-app/main/default/objects/Case/fields/Best_Time_to_contact__c.field-meta.xml
<CustomField>
    <fullName>Best_Time_to_contact__c</fullName>
    <formula>Account.Best_Time_to_contact__c</formula>
    <label>Best Time to contact</label>
    <type>Text</type>
</CustomField>