force-app/main/default/objects/Case/fields/Blacklisted_Consumer__c.field-meta.xml
<CustomField>
    <fullName>Blacklisted_Consumer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Blacklisted Consumer</label>
    <type>Checkbox</type>
</CustomField>