force-app/main/default/objects/Case/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <description>Live Chat Transcript : Brand</description>
    <label>Brand</label>
    <length>18</length>
    <type>Text</type>
</CustomField>