force-app/main/default/objects/Case/fields/Branding__c.field-meta.xml
<CustomField>
    <fullName>Branding__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Branding Content</label>
    <referenceTo>Branding_Content__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>