force-app/main/default/objects/Case/fields/Browser__c.field-meta.xml
<CustomField>
    <fullName>Browser__c</fullName>
    <description>Live Chat Transcript : Browser</description>
    <label>Browser</label>
    <length>100</length>
    <type>Text</type>
</CustomField>