force-app/main/default/objects/Case/fields/Case_Age__c.field-meta.xml
<CustomField>
    <fullName>Case_Age__c</fullName>
    <description>This is used to calculate the age of a case. Built as part of SP-4679</description>
    <formula>IF( IsClosed , (ClosedDate - CreatedDate) *24, (NOW() - CreatedDate ) *24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Age</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>