force-app/main/default/objects/Case/fields/Case_Owner_Company__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner_Company__c</fullName>
    <description>Name of the company that the case owner works for. this is used to identify to which company to scalate the case to.</description>
    <inlineHelpText>Name of the company that the case owner works for. this is used to identify to which company to scalate the case to.</inlineHelpText>
    <label>Case Owner Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>