force-app/main/default/objects/Case/fields/Case_Reason__c.field-meta.xml
<CustomField>
    <fullName>Case_Reason__c</fullName>
    <label>Case Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>0% Commission</fullName>
            </value>
            <value>
                <fullName>0% Commission Cancel / Decrease</fullName>
            </value>
            <value>
                <fullName>1st Warning</fullName>
            </value>
            <value>
                <fullName>2nd Warning</fullName>
            </value>
            <value>
                <fullName>ABN</fullName>
            </value>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>Acct related Call Back</fullName>
            </value>
            <value>
                <fullName>Add / Deactivate User</fullName>
            </value>
            <value>
                <fullName>Add child account</fullName>
            </value>
            <value>
                <fullName>Additional Order Time</fullName>
            </value>
            <value>
                <fullName>Agreement Issue</fullName>
            </value>
            <value>
                <fullName>Alcohol Listing Request</fullName>
            </value>
            <value>
                <fullName>All Inclusive</fullName>
            </value>
            <value>
                <fullName>Assignment Rules</fullName>
            </value>
            <value>
                <fullName>Automation</fullName>
            </value>
            <value>
                <fullName>Bad Debt Check</fullName>
            </value>
            <value>
                <fullName>Bad Restaurant Service</fullName>
            </value>
            <value>
                <fullName>Bank/Police request</fullName>
            </value>
            <value>
                <fullName>Bank Account Change</fullName>
            </value>
            <value>
                <fullName>Bank Account Details</fullName>
            </value>
            <value>
                <fullName>Bank Account Details Collected</fullName>
            </value>
            <value>
                <fullName>BE Restaurant Name Change</fullName>
            </value>
            <value>
                <fullName>Best Price Guarantee</fullName>
            </value>
            <value>
                <fullName>Bill Request</fullName>
            </value>
            <value>
                <fullName>Blacklist removal request</fullName>
            </value>
            <value>
                <fullName>Block Payout</fullName>
            </value>
            <value>
                <fullName>Bonus / Bonus Problems</fullName>
            </value>
            <value>
                <fullName>BPG Violation Report</fullName>
            </value>
            <value>
                <fullName>Bug</fullName>
            </value>
            <value>
                <fullName>Business Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>