force-app/main/default/objects/Case/fields/Case_Reason_Level_2__c.field-meta.xml
<CustomField>
    <fullName>Case_Reason_Level_2__c</fullName>
    <label>Case Reason Level 2</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Case_Reason_Level_1__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>9Cookies</fullName>
                <isActive>false</isActive>
                <label>9Cookies</label>
            </value>
            <value>
                <fullName>Account management</fullName>
            </value>
            <value>
                <fullName>Activation</fullName>
            </value>
            <value>
                <fullName>Basic profile change</fullName>
            </value>
            <value>
                <fullName>Box</fullName>
            </value>
            <value>
                <fullName>Cancellation</fullName>
            </value>
            <value>
                <fullName>Cancellation by restaurant</fullName>
            </value>
            <value>
                <fullName>Cancellation of order by customer</fullName>
            </value>
            <value>
                <fullName>Change order details</fullName>
            </value>
            <value>
                <fullName>Changes to restaurant profile</fullName>
            </value>
            <value>
                <fullName>Change to order</fullName>
            </value>
            <value>
                <fullName>Contactless delivery</fullName>
            </value>
            <value>
                <fullName>Customer account</fullName>
            </value>
            <value>
                <fullName>Customer evaluations</fullName>
            </value>
            <value>
                <fullName>Customer reviews for partners</fullName>
            </value>
            <value>
                <fullName>Customer service complaint</fullName>
            </value>
            <value>
                <fullName>Deals update</fullName>
            </value>
            <value>
                <fullName>Delivery changes</fullName>
            </value>
            <value>
                <fullName>Delivery complaint</fullName>
            </value>
            <value>
                <fullName>Delivery inquiries</fullName>
            </value>
            <value>
                <fullName>Delivery Inquiry</fullName>
            </value>
            <value>
                <fullName>Delivery time</fullName>
            </value>
            <value>
                <fullName>Door Sticker Request</fullName>
            </value>
            <value>
                <fullName>Feedback</fullName>
            </value>
            <value>
                <fullName>Follow up on existing case</fullName>
            </value>
            <value>
                <fullName>Food complaint</fullName>
            </value>
            <value>
                <fullName>Food issue</fullName>
            </value>
            <value>
                <fullName>Frontend issue</fullName>
            </value>
            <value>
                <fullName>Front end website</fullName>
            </value>
            <value>
                <fullName>General customer complaint</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>