force-app/main/default/objects/Case/fields/Case_Reason_Level_3__c.field-meta.xml
<CustomField>
    <fullName>Case_Reason_Level_3__c</fullName>
    <label>Case Reason Level 3</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Case_Reason_Level_2__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Account deletion</fullName>
            </value>
            <value>
                <fullName>Account management feedback on existing issue required</fullName>
            </value>
            <value>
                <fullName>Account management meeting request</fullName>
            </value>
            <value>
                <fullName>Add items/ toppings</fullName>
            </value>
            <value>
                <fullName>Add menu category</fullName>
            </value>
            <value>
                <fullName>Address</fullName>
            </value>
            <value>
                <fullName>Address change</fullName>
            </value>
            <value>
                <fullName>Allergens Update</fullName>
            </value>
            <value>
                <fullName>App complaint by customer</fullName>
            </value>
            <value>
                <fullName>App does not receive orders</fullName>
            </value>
            <value>
                <fullName>App issue</fullName>
            </value>
            <value>
                <fullName>App problem ‒ 9Cookies</fullName>
            </value>
            <value>
                <fullName>App shows blank screen</fullName>
            </value>
            <value>
                <fullName>Automations - Backend Ticket</fullName>
            </value>
            <value>
                <fullName>Automations - Missed Contact</fullName>
            </value>
            <value>
                <fullName>Bank account details change</fullName>
            </value>
            <value>
                <fullName>Branded material request</fullName>
            </value>
            <value>
                <fullName>Calculation mistakes in invoice</fullName>
            </value>
            <value>
                <fullName>Cancellation reason inquiry</fullName>
            </value>
            <value>
                <fullName>Cannot apply</fullName>
            </value>
            <value>
                <fullName>Category hide or unhide</fullName>
            </value>
            <value>
                <fullName>Change/upload listing image</fullName>
            </value>
            <value>
                <fullName>Change/upload product photo</fullName>
            </value>
            <value>
                <fullName>Change account details</fullName>
            </value>
            <value>
                <fullName>Change delivery time</fullName>
            </value>
            <value>
                <fullName>Change of business registration</fullName>
            </value>
            <value>
                <fullName>Change of mind</fullName>
            </value>
            <value>
                <fullName>Change of owner</fullName>
            </value>
            <value>
                <fullName>Change or upload logo</fullName>
            </value>
            <value>
                <fullName>Changes in delivery fee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>