force-app/main/default/objects/Case/fields/Change_of_Ownership_Documentation__c.field-meta.xml
<CustomField>
    <fullName>Change_of_Ownership_Documentation__c</fullName>
    <label>Change of Ownership Documentation</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Change of Ownership form</fullName>
            </value>
            <value>
                <fullName>New Owner&apos;s ID</fullName>
            </value>
            <value>
                <fullName>Sublease Agreement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>