force-app/main/default/objects/Case/fields/Closed_Date_temp__c.field-meta.xml
<CustomField>
    <fullName>Closed_Date_temp__c</fullName>
    <label>Closed_Date_temp</label>
    <type>DateTime</type>
</CustomField>