force-app/main/default/objects/Case/fields/Closed_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closed_Reason__c</fullName>
    <label>Closed Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Take Online</fullName>
            </value>
            <value>
                <fullName>Take Online is not possible</fullName>
            </value>
            <value>
                <fullName>Successful</fullName>
            </value>
            <value>
                <fullName>Not Successful</fullName>
            </value>
            <value>
                <fullName>Invalid</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Create Retention Task</fullName>
            </value>
            <value>
                <fullName>Create Take Offline Task for Non Contracted</fullName>
            </value>
            <value>
                <fullName>Take Offline</fullName>
            </value>
            <value>
                <fullName>Retention</fullName>
            </value>
            <value>
                <fullName>Not Successful - Data Missing</fullName>
            </value>
            <value>
                <fullName>Not Successful - Commission is not correct</fullName>
            </value>
            <value>
                <fullName>Back Online</fullName>
            </value>
            <value>
                <fullName>Not Reachable</fullName>
            </value>
            <value>
                <fullName>Spam</fullName>
            </value>
            <value>
                <fullName>Duplicated</fullName>
            </value>
            <value>
                <fullName>Auto Closed</fullName>
            </value>
            <value>
                <fullName>Escalated to AM</fullName>
            </value>
            <value>
                <fullName>Successful Call</fullName>
            </value>
            <value>
                <fullName>Call Scheduled</fullName>
            </value>
            <value>
                <fullName>Improvement on KPI’s (Agent)</fullName>
            </value>
            <value>
                <fullName>Improvement on KPI’s (AM)</fullName>
            </value>
            <value>
                <fullName>Restaurant Taken Offline (1 st Incident)</fullName>
            </value>
            <value>
                <fullName>Restaurant Taken Offline (Permanent)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>