force-app/main/default/objects/Case/fields/Comments_del__c.field-meta.xml
<CustomField>
    <fullName>Comments_del__c</fullName>
    <description>Comments from legacy SF</description>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>