force-app/main/default/objects/Case/fields/Company_Code__c.field-meta.xml
<CustomField>
    <fullName>Company_Code__c</fullName>
    <description>Company code. Comes from the record type provided naming conventions are respected e.g DH_AU for Delivery Hero Australia</description>
    <label>Company Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>