force-app/main/default/objects/Case/fields/Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email__c</fullName>
    <description>Live Chat Transcript : Contact Email - This field is needed for Live Chat and NPS Purposes as the Prechat email field is a text field.</description>
    <label>Contact Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>