force-app/main/default/objects/Case/fields/Contact_Language__c.field-meta.xml
<CustomField>
    <fullName>Contact_Language__c</fullName>
    <formula>TEXT(Account.Preferred_language__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Language</label>
    <type>Text</type>
</CustomField>