force-app/main/default/objects/Case/fields/Contact_Person_Phone__c.field-meta.xml
<CustomField>
    <fullName>Contact_Person_Phone__c</fullName>
    <label>Call Back Request Phone</label>
    <length>100</length>
    <type>Text</type>
</CustomField>