force-app/main/default/objects/Case/fields/Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Contact_Phone__c</fullName>
    <description>Custom Field used for DE Customer Care as they do not link end customers as a contact, therefore we cannot use Person Contact Phone field for our mappings.</description>
    <label>Contact Phone</label>
    <type>Phone</type>
</CustomField>