force-app/main/default/objects/Case/fields/CRM_Date__c.field-meta.xml
<CustomField>
    <fullName>CRM_Date__c</fullName>
    <label>CRM Date</label>
    <type>Date</type>
</CustomField>