force-app/main/default/objects/Case/fields/CRM_P_I_C__c.field-meta.xml
<CustomField>
    <fullName>CRM_P_I_C__c</fullName>
    <label>CRM P.I.C</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>0.자동</fullName>
            </value>
            <value>
                <fullName>1.메뉴자동화 A</fullName>
            </value>
            <value>
                <fullName>1.메뉴자동화 B</fullName>
            </value>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>A(A)-배요환</fullName>
            </value>
            <value>
                <fullName>A(A)-신지현</fullName>
            </value>
            <value>
                <fullName>A(A)-정우경</fullName>
            </value>
            <value>
                <fullName>A(A)-정현주</fullName>
            </value>
            <value>
                <fullName>A(B)-구하윤</fullName>
            </value>
            <value>
                <fullName>A(B)-박애경</fullName>
            </value>
            <value>
                <fullName>A(B)-오택룡</fullName>
            </value>
            <value>
                <fullName>A(B)-이명현</fullName>
            </value>
            <value>
                <fullName>A(B)-이수현</fullName>
            </value>
            <value>
                <fullName>A(B)-이승희</fullName>
            </value>
            <value>
                <fullName>A(B)-이지호</fullName>
            </value>
            <value>
                <fullName>A(B)-장유화</fullName>
            </value>
            <value>
                <fullName>A(C)-심수빈</fullName>
            </value>
            <value>
                <fullName>A(C)-조우미</fullName>
            </value>
            <value>
                <fullName>A-배은령</fullName>
            </value>
            <value>
                <fullName>A-이민</fullName>
            </value>
            <value>
                <fullName>A-최윤정</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>Bulk Insert</fullName>
            </value>
            <value>
                <fullName>D(A)-권수정</fullName>
            </value>
            <value>
                <fullName>D(A)-심민선</fullName>
            </value>
            <value>
                <fullName>D(A)-양희영</fullName>
            </value>
            <value>
                <fullName>D(A)-임수현</fullName>
            </value>
            <value>
                <fullName>D(A)-최민지</fullName>
            </value>
            <value>
                <fullName>D(C)-김규민</fullName>
            </value>
            <value>
                <fullName>D(C)-김미현</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>