force-app/main/default/objects/Case/fields/Customer_Phone_Number_1__c.field-meta.xml
<CustomField>
    <fullName>Customer_Phone_Number_1__c</fullName>
    <label>Customer Phone Number 1</label>
    <type>Phone</type>
</CustomField>