force-app/main/default/objects/Case/fields/Customer_Phone_Number_2__c.field-meta.xml
<CustomField>
    <fullName>Customer_Phone_Number_2__c</fullName>
    <label>Customer Phone Number 2</label>
    <type>Phone</type>
</CustomField>