force-app/main/default/objects/Case/fields/Date_Time_Resolved__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Resolved__c</fullName>
    <description>SP-2331</description>
    <label>Date/Time Resolved</label>
    <type>DateTime</type>
</CustomField>