force-app/main/default/objects/Case/fields/Delivery_Area_Type_Date__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Area_Type_Date__c</fullName>
    <label>Delivery Area Type Date</label>
    <type>DateTime</type>
</CustomField>